# rustic

./: .gitignore  Cargo.toml  costpoint_helper.user.js  docker-compose.yml  script
alerts/: Cargo.toml  README.md
alerts/src/: error.rs  main.rs
db/: README.md  docker-compose.yml
db/db_init/: 01_schema.sql.sql  02_user_setup.sql  03_charge_codes_seed.sql  Dockerfile  charge_codes.csv
monitor_workday/: Cargo.toml  Dockerfile
monitor_workday/src/: main.rs
monitor_workday/src/monitor_actions/: mod.rs  monitor_orchistrator.rs
monitor_workday/src/monitor_actions/actions/: long_running_timer_check.rs  midnight_check.rs  mod.rs  nearing_eod_check.rs
monitor_workday/src/utils/: error.rs
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/migrations/: 01_schema.sql  02_default_codes.sql
server/src/: lib.rs
server/src/db/: charge_code_repo.rs  mod.rs  time_entry_repo.rs
server/src/db/fixtures/: time_entries.sql
server/src/models/: charge_code.rs  costpoint_entry.rs  mod.rs  time_entry.rs
server/src/routes/: charge_code_routes.rs  mod.rs  time_entry_routes.rs
server/src/services/: mod.rs  time_entry_service.rs
server/src/utils/: connections.rs  error.rs  mod.rs  time.rs
shared_lib/: Cargo.toml
shared_lib/src/: lib.rs
shared_lib/src/api_client/: mod.rs
shared_lib/src/models/: charge_code.rs  day.rs  full_state.rs  time_entry.rs
shared_models/: Cargo.toml
shared_models/src/: charge_code.rs  day.rs  full_state.rs  lib.rs  time_entry.rs
tui/: 1q  Cargo.toml  LICENSE  README.md
tui/.config/: config.json5
tui/src/: action.rs  app.rs  cli.rs  components.rs  config.rs  main.rs  mode.rs  tui.rs
tui/src/action_history/: mod.rs
tui/src/api_client/: mod.rs  requests.rs
tui/src/api_client/models/: charge_code.rs  day.rs  mod.rs  server_response.rs  time_entry.rs
tui/src/components/: component_utils.rs  fps.rs  home.rs  mod.rs  mode_selector.rs  notes.rs  time_entry.rs  time_entry_container.rs  top_bar.rs  weekday_selector.rs
tui/src/components/modals/: charge_code_picker.rs  mod.rs  time_edit_modal.rs
tui/src/components/modals/swap_time_modal/: layout.rs  mod.rs  swap_entry_list.rs  swap_time_edit_timer.rs
tui/src/components/notes/: mod.rs  notes_wrapper.rs  regular_notes.rs  vim.rs  vim_notes.rs
tui/src/components/standup/: mod.rs  standup_container.rs
tui/src/components/time_entry/: entry.rs  mod.rs  time_entry.rs  time_entry_container.rs  time_utils.rs
tui/src/components/top_bar/: layout.rs  mod.rs  mode_selector.rs  weekday_selector.rs
tui/src/shared/: error.rs  mod.rs
