[package]
name = "alerts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.5.0"
log = "0.4.20"
notify-rust = "4.10.0"
reqwest = "0.11.23"
tokio = {version = "1", features = ["full"]}
anyhow = "1.0.79"
thiserror = "1.0.56"

shared_lib = { path = "../shared_lib" }

