[package]
name = "rustic-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustic-server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = {version = "1", features = ["full"]}
