[package]
name = "rustic-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustic-server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
axum = "0.6.20"
chrono = "0.4.31"
serde = "1.0.193"
sqlx = {version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = "1.0.51"
tokio = {version = "1", features = ["full"]}
