[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = ["serde"]}
reqwest = {version = "0.11.23", features = ["json"]}
serde = "1.0.195"
serde_repr = "0.1.18"
sqlx = "0.7.3"
